grate: initial gallium driver for NVIDIA Tegra
Add a stub Gallium driver for NVIDIA Tegra SoCs to serve as a basis for
future development.

Signed-off-by: Thierry Reding <thierry.reding@avionic-design.de>
Signed-off-by: Dmitry Osipenko <digetx@gmail.com>
Signed-off-by: Nicolas Chauvet <kwizart@gmail.com>
Signed-off-by: Erik Faye-Lund <kusmabite@gmail.com>

--- a/src/gallium/drivers/grate/meson.build
+++ b/src/gallium/drivers/grate/meson.build
@@ -1,15 +1,15 @@
-# Copyright © 2018 NVIDIA CORPORATION
-
+# Copyright © 2017 Erik Faye-Lund
+#
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
 # in the Software without restriction, including without limitation the rights
 # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 # copies of the Software, and to permit persons to whom the Software is
 # furnished to do so, subject to the following conditions:
-
+#
 # The above copyright notice and this permission notice shall be included in
 # all copies or substantial portions of the Software.
-
+#
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -18,17 +18,36 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-libtegradrm = static_library(
-  'tegradrm',
-  'tegra_drm_winsys.c',
-  include_directories : [
-    inc_include, inc_src, inc_gallium, inc_gallium_aux, inc_gallium_drivers,
-    inc_gallium_winsys
-  ],
-  dependencies : [dep_libdrm, dep_libdrm_tegra],
+files_libgrate = files(
+  'grate_common.h',
+  'grate_context.c',
+  'grate_context.h',
+  'grate_draw.c',
+  'grate_draw.h',
+  'grate_resource.c',
+  'grate_resource.h',
+  'grate_screen.c',
+  'grate_screen.h',
+  'grate_state.c',
+  'grate_state.h',
+  'grate_surface.c',
+  'grate_surface.h',
 )
 
-driver_tegra = declare_dependency(
-  compile_args : '-DGALLIUM_TEGRA',
-  link_with : libtegradrm,
+libgrate = static_library(
+  'grate',
+  [files_libgrate],
+  include_directories : [
+    inc_src, inc_include, inc_gallium, inc_gallium_aux,
+    inc_gallium_drivers,
+  ],
+  c_args : [c_vis_args],
+  cpp_args : [cpp_vis_args],
+  dependencies : [dep_libdrm, dep_libdrm_tegra],
+  build_by_default : false,
+)
+
+driver_grate = declare_dependency(
+  compile_args : '-DGALLIUM_GRATE',
+  link_with : [libgrate, libtegradrm],
 )
