Add platform-rs, vulkan-mir, EGL_KHR_platform_mir.
This commit
- incorporates support for Mir's new render surface based EGL driver
(alpha)
- adds Vulkan WSI driver for Mir (alpha)
- adds EGL_KHR_platform_mir (yet to be ratified)

The render surface-based backend is implemented as a new platform so the
legacy (buffer stream-based) backend can be supported simultaneously.

TODO:
- Mir-team intends to change the name 'render surface' (and all its
associated symbols) to 'surface' in the very new feature. As soon as
that happens this patch will require a refresh.

--- a/debian/rules
+++ b/debian/rules
@@ -63,6 +63,7 @@ else
 	EGL_PLATFORMS += wayland
 # Likewise, Mir makes no attempt to be portable to random kernels.
 	EGL_PLATFORMS += mir
+	EGL_PLATFORMS += rs
     ifeq (,$(filter $(DEB_HOST_ARCH), s390 s390x))
 	DRI_DRIVERS += nouveau
     endif
