--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -3,3 +3,6 @@ d49d275c415d60ae08dc3e52d8db11f19a44010f anv/blorp: Don't sanitize the swizzle f
 # The commit addressed an earlier commit 0567ab0407e which did not land in branch.
 # A stable specific backported patch will follow later ...
 bc5d587a80b64fb3e0a5ea8067e6317fbca2bbc5 radv: Invalidate L2 for TRANSFER_WRITE barriers
+# The commit caused a regression in i965 (and possibly others) since
+# it didn't implement v4 of DRI2's flush extension.
+ba8df2286a50117011925e915cd832b4a79f126e gbm/dri: Flush after unmap
