--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -3,3 +3,6 @@ d49d275c415d60ae08dc3e52d8db11f19a44010f anv/blorp: Don't sanitize the swizzle f
 # The commit addressed an earlier commit 0567ab0407e which did not land in branch.
 # A stable specific backported patch will follow later ...
 bc5d587a80b64fb3e0a5ea8067e6317fbca2bbc5 radv: Invalidate L2 for TRANSFER_WRITE barriers
+# stable: the commit depends on earlier commit 656e30b6860 which did
+# 	  not land in branch, and some other dependencies.
+d2d6cf6c8387ac06c8559027f57683a61b48671b anv: Add the pci_id into the shader cache UUID
