cherry-ignore: Fix typos.
Nomination in stable.

17.1 nomination only.

The commit depends on earlier commit 7748c3f5eb1 which did not land in
branch and the part that could be merged is not really providing
anything relevant to stable.

Signed-off-by: Andres Gomez <agomez@igalia.com>

--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -9,3 +9,8 @@ d2d6cf6c8387ac06c8559027f57683a61b48671b anv: Add the pci_id into the shader cac
 # stable: 17.1 nomination only. Fixes earlier commit 0b613c20 which
 # 	  did not land in branch.
 d4601b0efc7f5e24e3f39fefa8e29e79560245ce freedreno: fix crash if ctx torn down with no rendering
+# stable: 17.1 nomination only. the commit depends on earlier commit
+# 	  7748c3f5eb1 which did not land in branch and the part that
+# 	  could be merged is not really providing anything relevant to
+# 	  stable.
+b81d85f1754928139f9f01474495e024946aa1b4 configure.ac: Fix typos.
