--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -23,3 +23,6 @@ dee31311eb024a636466e359b43d3a67b0135f32 Revert "i965/fs: Don't emit SEL instruc
 # fixes: finds 2 commit references but it is really only one, and only
 #        in master.
 2b3c490e23a6cd7f4f6bb489267c2b9b4fde5b20 radv: fix typo in a2b10g10r10 fast clear calculation
+# fixes: removes unused symbols but it doesn't really add nor fix
+#        anything relevant.
+9807e9dea67a60ab8ee04741c75b748eade582ee anv: remove unused anv_dispatch_table dtable
