--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -34,3 +34,6 @@ dee31311eb024a636466e359b43d3a67b0135f32 Revert "i965/fs: Don't emit SEL instruc
 # fixes: reported only because referes to fixes in 2 commits, but they
 #        are not in stable.
 3f2cb699cfe0481f214c709b5a1375caf0a9c7fe android: vulkan: add support for libmesa_vulkan_util
+# fixes: reported only because referes to fixes in 2 commits, but they
+#        are not in stable.
+61c38d14b7b1d0ccacc440340ee0b1bc4454eca2 android: r600: fix libmesa_amd_common dependency
