--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -37,3 +37,6 @@ dee31311eb024a636466e359b43d3a67b0135f32 Revert "i965/fs: Don't emit SEL instruc
 # fixes: reported only because referes to fixes in 2 commits, but they
 #        are not in stable.
 61c38d14b7b1d0ccacc440340ee0b1bc4454eca2 android: r600: fix libmesa_amd_common dependency
+# fixes: removes unused symbols but it doesn't really add nor fix
+#        anything relevant.
+b69a03e12aa38ed5d8b60a056630ed445f6097dc i965: remove dead brw_new_shader() declaration
