--- a/bin/.cherry-ignore
+++ b/bin/.cherry-ignore
@@ -40,3 +40,5 @@ dee31311eb024a636466e359b43d3a67b0135f32 Revert "i965/fs: Don't emit SEL instruc
 # fixes: removes unused symbols but it doesn't really add nor fix
 #        anything relevant.
 b69a03e12aa38ed5d8b60a056630ed445f6097dc i965: remove dead brw_new_shader() declaration
+# fixes: it just cleans .gitignore.
+f282ace67862c0633d0a8135e4808867740d0d39 i965: remove i965_symbols_test reference from .gitignore
