--- a/debian/rules
+++ b/debian/rules
@@ -114,7 +114,7 @@ ifneq (,$(filter $(DEB_HOST_ARCH), x32))
 	confflags += --disable-asm
 endif
 
-confflags_EGL = --with-egl-platforms="$(EGL_PLATFORMS)"
+confflags_EGL = --with-platforms="$(EGL_PLATFORMS)"
 confflags_GLES = --disable-gles1 --enable-gles2
 confflags_GALLIUM += --with-gallium-drivers="$(GALLIUM_DRIVERS)"
 
