--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,7 @@ include debian/not-installed
 DRI_DRIVERS =
 GALLIUM_DRIVERS =
 VULKAN_DRIVERS =
-EGL_PLATFORMS = x11
+EGL_PLATFORMS = x11,surfaceless
 
 confflags_DRI3 = --disable-dri3
 
