--- a/.gitlab-ci/test-source-dep.yml
+++ b/.gitlab-ci/test-source-dep.yml
@@ -174,6 +174,7 @@
 .radeonsi-rules:
   stage: radeonsi
   rules:
+    - *ignore_scheduled_pipelines
     - changes:
         *mesa_core_file_list
       when: on_success
